# eng-leaderboard-be

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 24a7bacf6dc6_remove_updated_at_and_add_create_at_in_.py  7c394e8d5874_add_table_players.py  dce2ed5375e8_create_tables.py  e1116efb159d_add_uploader_attr_to_table_players.py
apis/: player.py
controllers/: player.py
db/: database.py
models/: player.py  user.py
schemas/: player.py
utils/: db.py  env_loader.py  error.py
